alteracao feita por jeffrey

--- a/disciplina.html
+++ b/disciplina.html
@@ -16,7 +16,7 @@
         <a href="index.html"> <div class="primeirobotao"> <p> Home </p> </div> </a>
         <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
         <a href=""> <div> <p> Lista </p> </div> </a>
-        <a href=""> <div> <p> Detalhes </p> </div> </a>
+        <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href=""> <div> <p> Notícias </p> </div> </a>
     </header>
     <h1 class="h1Disciplina"> DISCPLINA DOS CURSOS </h1>
