atualizado por katelyn

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <header>
         <img src="img/faculdadeimpacta.png" class="imagemHeader">
-        
+
         <a href="index.html"> <div class="primeirobotao"> <p> Home </p> </div> </a>
         <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
-        <a href=""> <div> <p> Lista </p> </div> </a>
+        <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
-        <a href=""> <div> <p> Notícias </p> </div> </a>
+        <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
     </header>
-    <h1 class="h1Disciplina"> PÁGINA INÍCIAL </h1>
+    <h1 class="h1home"> PÁGINA INÍCIAL </h1>
     <footer></footer>
 </body>
 </html>
