--- a/noticias.html
+++ b/noticias.html
@@ -6,7 +6,7 @@
     <title> Detalhes </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/descricao.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/noticias.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
     </header>
-    <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
+    <h1 class="h1noticias"> NOTÍCIAS </h1>
     <footer></footer>
 </body>
 </html>
