--- a/listadecurso.html
+++ b/listadecurso.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Detalhes </title>
+    <title> Home </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/descricao.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/listacurso.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -19,7 +20,7 @@
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
     </header>
-    <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
+    <h1 class="h1lista"> LISTA DE CURSOS </h1>
     <footer></footer>
 </body>
 </html>
