--- a/descricao_cursos.html
+++ b/descricao_cursos.html
@@ -20,6 +20,24 @@
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
     </header>
     <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
+
+    <h2 class="h2descricao">Administração</h2>
+
+    <div class="pdescricao">
+        <h3 class="sobre">Sobre o curso:</h3>
+    <p class="p">
+        Tornar-se um líder. Ser um empreendedor. Fazer investimentos. Você tem inúmeras possibilidades na graduação em Administração da Faculdade Impacta.
+        </p>
+        <p class="p">
+        O curso é voltado para as exigências do mercado de trabalho atual e aborda de forma ampla o universo corporativo. Você vai aprender a definir as melhores estratégias para o bom funcionamento das empresas, para gerar lucros, controlar gastos e se destacar com qualidade entre as concorrentes.
+        </p>
+        <p class="p">
+        Gerir equipes, negociar com fornecedores, solucionar diferentes problemas, atingir resultados positivos, aumentar a produtividade e aplicar novas tecnologias nas organizações também são funções do administrador.
+        </p>
+        <p class="p">
+        Ao final do 2.º ano, os alunos já terão o diploma de Tecnólogo em Processos Gerenciais.
+        </p>
+    </div>
     <footer></footer>
 </body>
 </html>
