cansei dessa porra

--- a/listadecurso.html
+++ b/listadecurso.html
@@ -20,7 +20,32 @@
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
     </header>
-    <h1 class="h1lista"> LISTA DE CURSOS </h1>
+    <h1 class="h1lista"> LISTA DE CURSOS </h1> <br> <br>
+
+<h2 class="h2lista">POR QUE A IMPACTA REVOLUCIONA O SEU FUTURO ?</h2> <br> <br>
+
+
+
+ <p class="texto">Há 30 anos no mercado, a Faculdade Impacta tem alto nível de empregabilidade nas maiores empresas do País.
+Segundo pesquisa realizada pelo LinkedIn, a Instituição possui 98,2% de contratação no segundo semestre do curso.<P> ,<br>
+
+ <h3 class="h2lista">ESCOLHA A GRADUAÇÃO QUE VAI REVOLUCIONAR</h3>
+  <div class="adm">
+ <p class="ADM2"> Administração <p>
+   <p class="ADM3"> Inteligencia de Négocio e Gestão de Projetos
+</div>
+
+<div class="ADS">
+<p class="ADM2"> Administração <p>
+ <p class="ADM3"> Inteligencia de Négocio e Gestão de Projetos
+</div>
+
+
+
+
+
+
+
     <footer></footer>
 </body>
 </html>
