ateracao feita por jeff

--- a/descricao_cursos.html
+++ b/descricao_cursos.html
@@ -22,7 +22,11 @@
     <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
 
     <h2 class="h2descricao">Administração</h2>
-
+    <br>
+    <small class="sub">Inteligência de Negócios e Gestão de Projetos</small>
+    <br>
+    <br>
+    <button class="botao">INSCREVA-SE</button>
     <div class="pdescricao">
         <h3 class="sobre">Sobre o curso:</h3>
     <p class="p">
@@ -37,6 +41,12 @@
         <p class="p">
         Ao final do 2.º ano, os alunos já terão o diploma de Tecnólogo em Processos Gerenciais.
         </p>
+    </div>
+    <div class="lateral1">
+    <h4 class="bacharel">BACHARELADO</h4>
+    <p class="periodo" '>Peródo:</p>
+    <img class="ampulheta" width="30" height="30" src="https://images.vexels.com/media/users/3/151955/isolated/lists/13dfcfb1a5bda28b460884c69ccc1c17--cone-do-curso-de-ampulheta.png">
+    <p class="noturno">Noturno</p> <p class="noturno2">|19h00 às 22h40|</p>
     </div>
     <footer></footer>
 </body>
