--- a/descricao_cursos.html
+++ b/descricao_cursos.html
@@ -13,7 +13,7 @@
     <header>
         <img src="img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p> Home </p> </div> </a>
+        <a href="index.html"> <div class="primeirobotao"> <p>  Impacta </p> </div> </a>
         <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
         <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
