--- a/listadecurso.html
+++ b/listadecurso.html
@@ -14,13 +14,13 @@
     <header>
         <img src="img/faculdadeimpacta.png" class="imagemHeader">
 
-        <a href="index.html"> <div class="primeirobotao"> <p> Home </p> </div> </a>
+        <a href="index.html"> <div class="primeirobotao"> <p>  Impacta  </p> </div> </a>
         <a href="disciplina.html"> <div> <P> Disciplina </p> </div> </a>
         <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
-    </header>
-    <h1 class="h1lista"> LISTA DE CURSOS </h1> <br> <br>
+    </header> <br> <br>
+   
 
 <h2 class="h2lista">POR QUE A IMPACTA REVOLUCIONA O SEU FUTURO ?</h2> <br> <br>
 
@@ -29,23 +29,92 @@
  <p class="texto">Há 30 anos no mercado, a Faculdade Impacta tem alto nível de empregabilidade nas maiores empresas do País.
 Segundo pesquisa realizada pelo LinkedIn, a Instituição possui 98,2% de contratação no segundo semestre do curso.<P> ,<br>
 
- <h3 class="h2lista">ESCOLHA A GRADUAÇÃO QUE VAI REVOLUCIONAR</h3>
-  <div class="adm">
- <p class="ADM2"> Administração <p>
-   <p class="ADM3"> Inteligencia de Négocio e Gestão de Projetos
+ <h3 class="h3lista">ESCOLHA A GRADUAÇÃO QUE VAI REVOLUCIONAR</h3> <br> <br>
+   
+<div class="teste">
+   
+    <div class="adm">
+        <p class="ADM2"> Administração <p>
+        <p class="ADM3"> Inteligencia de Négocio e Gestão de Projetos
+    </div>
+
+    <div class="ADS">
+        <p class="ADM2"> Análise e Desenvolvimento de Sistemas <p>
+        <p class="ADM3"> Iot , DevOps & mobile </p>
+    </div>
+
+
+    <div class="ADSE">
+        <p class="ADM2"> Análise e Desenvolvimento de Sistemas EAD <p>
+        <p class="ADM3"> Iot , DevOps & mobile </p>
+    </div>
+
+
 </div>
 
-<div class="ADS">
-<p class="ADM2"> Administração <p>
- <p class="ADM3"> Inteligencia de Négocio e Gestão de Projetos
+<div class="teste">
+ 
+    <div class="adm">
+        <p class="ADM2"> Banco de Dados <p>
+        <p class="ADM3"> Data analytic & Big Data </p>
+    </div>
+
+    <div class="ADS">
+        <p class="ADM2"> Engenharia da Computação <p>
+        <p class="ADM3"> Internet das coisas, Automação, Inteligência Artificial </p>
+    </div>
+
+
+    <div class="ADSE">
+        <p class="ADM2"> Gestão da Tecnologia da informação <p>
+        <p class="ADM3"> ERP & Gestão e Qualidade </p>
+    </div>
+
+
 </div>
 
 
+<div class="teste">
+ 
+    <div class="adm">
+        <p class="ADM2"> Jogos Digitais <p>
+        <p class="ADM3"> Desing de Games e Games Programming</p>
+    </div>
+
+    <div class="ADS">
+        <p class="ADM2"> Processo Gerenciais  <p>
+        <p class="ADM3"> Inteligência de Negócios & Viabilidade Projeto </p>
+    </div>
+
+
+    <div class="ADSE">
+        <p class="ADM2"> Produção Multimídia <p>
+        <p class="ADM3"> Web Desing, Autovisual & Desing Digital </p>
+    </div>
+
+
+</div>
+
+<div class="teste">
+ 
+    <div class="adm">
+        <p class="ADM2"> Redes de Computadores  <p>
+        <p class="ADM3"> cloud computing & cyber Securitys  </p>
+    </div>
+
+    <div class="ADS">
+        <p class="ADM2"> Sistemas de Informação  <p>
+        <p class="ADM3"> Business Agility & Computação cognitiva </p>
+    </div>
+
+
+   
+
+</div> 
 
 
 
 
 
-    <footer></footer>
 </body>
 </html>
