Atualizado pelo Vini

--- a/descricao_cursos.html
+++ b/descricao_cursos.html
@@ -18,6 +18,7 @@
         <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
+        <a href="login.html"><div class="login"> Login </div></a>
     </header>
     <h1 class="h1descricao"> DETALHES DOS CURSOS </h1>
 
