--- a/listadecurso.html
+++ b/listadecurso.html
@@ -6,7 +6,6 @@
     <title> Home </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/listacurso.css" />
     <script src="main.js"></script>
 </head>
@@ -19,6 +18,7 @@
         <a href="listadecurso.html"> <div> <p> Lista </p> </div> </a>
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
+        <a href="login.html"><div class="login"> Login </div></a>
     </header> <br> <br>
    
 
