--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
-
-    <script src="main.js"></script>
+    <script src="scripts/jquery.js"></script>
 </head>
 <body>
     <header>
@@ -22,7 +21,9 @@
         <a href="login.html"><div class="login"> Login </div></a>
 
     </header>
-    <h1 class="h1home"> PÁGINA INÍCIAL </h1>
+        <div class="cem-porcento div-vestibular"> <img src="img/vestibular-2019.png" alt="" class=""> </div>
+        <div class="cem-porcento"> <a href="#"> <div> INSCREVA-SE JÁ  </div> </a></div>
+
     <footer></footer>
 </body>
 </html>
