--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Home </title>
+    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="scripts/jquery.js"></script>
 </head>
 <body>
+
     <header>
         <img src="img/faculdadeimpacta.png" class="imagemHeader">
 
@@ -19,11 +22,75 @@
         <a href="descricao_cursos.html"> <div> <p> Detalhes </p> </div> </a>
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
         <a href="login.html"><div class="login"> Login </div></a>
-
     </header>
+
         <div class="cem-porcento div-vestibular"> <img src="img/vestibular-2019.png" alt="" class=""> </div>
         <div class="cem-porcento"> <a href="#"> <div> INSCREVA-SE JÁ  </div> </a></div>
+        <h2 class="main_title text-center"> CONHEÇA NOSSOS CURSOS </h2>
 
-    <footer></footer>
+          <div class="div-Graduacao">
+          <a href="#"> <img src="img/graduacao.jpg"  class="imagem-curso" alt="">
+          <h3 class="h3Graduacao"> Graduacao </h3><br><br>
+          <h4 class="h4Graduacao"> Cursos na área de Tecnologia, <br>Gestão e Design </h4>
+        </div></a>
+        <div class="div-transformacao"><h1 class="h1transformacao"> VOCÊ ESTÁ PREPARADO PARA A TRANSFORMAÇÃO DIGITAL?</h1></div>
+        <video class="video-transformacao" controls>
+          <source src="video/video-transformacao.mp4" type="video/mp4">
+          <source src="mov_bbb.ogg" type="video/ogg">
+          Your browser does not support HTML5 video.
+        </video>
+
+        </video>
+    <footer>
+
+      <section>
+        <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+        <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
+          <a href="https://twitter.com/facimpacta"> <i class="fab fa-twitter"></i> </a>
+          <a href="https://www.youtube.com/user/GrupoImpacta"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/facimpacta/"> <i class="fab fa-instagram"></i> </a>
+          <a href="https://www.linkedin.com/school/faculdade-impacta-tecnologia/"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright"> Copyright © Impacta 2018.</p>
+        <p class="copyright"> Todos os direitos reservados. </p>
+      </section>
+
+      <section>
+          <h3 class="h3footerAll"> A Impacta </h3>
+          <ul>
+            <a href="#"> <li> Sobre </li> </a>
+            <a href="#"> <li> Graduação </li> </a>
+            <a href="#"> <li> Contato </li> </a>
+          </ul>
+      </section>
+
+      <section>
+        <h3 class="h3footerAll"> Contato </h3>
+        <ul>
+            <li> Comercial: </li>
+            <li> Tel: (11) 3254-8300 </li>
+            <li> Secretaria </li>
+            <li> Tel: (11) 5593-5344 </li>
+            <li> Unidade - Barra Funda </li>
+            <li> Avenida Rudge, 315 - Barra Funda </li>
+            <li> São Paulo - SP </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3 class="h3footerAll"> Atendimento </h3>
+        <ul class="ultimoUl">
+            <li> Secretaria de Graduação </li>
+            <li> De segunda a sexta - das 9h às 21h </li>
+            <li> Sábado - das 9h às 13h </li>
+            <li> Ouvidoria </li>
+            <li> De segunda a sexta - das 9h às 18h </li>
+            <li> Avenida Rudge, 315 - Barra Funda </li>
+            <li> Tel: (11) 5593-5370</li>
+        </ul>
+      </section>
+    </footer>
 </body>
 </html>
