--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Login </title>
+    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/login.css" />
     <script src="main.js"></script>
