--- a/noticias.html
+++ b/noticias.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Detalhes </title>
+    <link rel="shortcut icon" href="img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/noticias.css" />
@@ -37,6 +38,55 @@ Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e rec
 Destaque no portal da Revista Exame como o curso que está entre os melhores do Brasil. (06/2017)<P>
  </div>
 
-    <footer></footer>
+    <footer>
+      <section>
+        <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
+        <h3 class="h3footer1"> Siga-nos nas redes sociais </h3>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/FacImpacta/"> <i class="fab fa-facebook"></i> </a>
+          <a href="https://twitter.com/facimpacta"> <i class="fab fa-twitter"></i> </a>
+          <a href="https://www.youtube.com/user/GrupoImpacta"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/facimpacta/"> <i class="fab fa-instagram"></i> </a>
+          <a href="https://www.linkedin.com/school/faculdade-impacta-tecnologia/"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright"> Copyright © Impacta 2018.</p>
+        <p class="copyright"> Todos os direitos reservados. </p>
+      </section>
+
+      <section>
+          <h3 class="h3footerAll"> A Impacta </h3>
+          <ul>
+            <a href="#"> <li> Sobre </li> </a>
+            <a href="#"> <li> Graduação </li> </a>
+            <a href="#"> <li> Contato </li> </a>
+          </ul>
+      </section>
+
+      <section>
+        <h3 class="h3footerAll"> Contato </h3>
+        <ul>
+            <li> Comercial: </li>
+            <li> Tel: (11) 3254-8300 </li>
+            <li> Secretaria </li>
+            <li> Tel: (11) 5593-5344 </li>
+            <li> Unidade - Barra Funda </li>
+            <li> Avenida Rudge, 315 - Barra Funda </li>
+            <li> São Paulo - SP </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3 class="h3footerAll"> Atendimento </h3>
+        <ul class="ultimoUl">
+            <li> Secretaria de Graduação </li>
+            <li> De segunda a sexta - das 9h às 21h </li>
+            <li> Sábado - das 9h às 13h </li>
+            <li> Ouvidoria </li>
+            <li> De segunda a sexta - das 9h às 18h </li>
+            <li> Avenida Rudge, 315 - Barra Funda </li>
+            <li> Tel: (11) 5593-5370</li>
+        </ul>
+      </section>
+    </footer>
 </body>
 </html>
