--- a/noticias.html
+++ b/noticias.html
@@ -25,11 +25,23 @@
     <img  class="FOTO" src="https://www.impacta.edu.br/uploads/pages/2018/07/premios-e-reconhecimentos-1532471656.png" alt="">
 <p class="facul"> A Faculdade Impacta é altamente reconhecida por sua atuação no mercado da educação, o que comprova
   o compromisso da Instituição com o ensino de qualidade e a dedicação do Grupo Impacta em transformar
-  a sociedade através da tecnologia.
+  a sociedade através da tecnologia. <br>
 
 Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e reconhecimentos que são
  resultados do trabalho contínuo de professores e funcionários e da determinação de seus alunos. <br> <br>
+
+
  <div class="ena">
+   <img class="img" src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="">
+ <p class="ga">Graduação em Administração<p>
+   <p class="texto"> Nota 4 na avaliação do MEC – 10.ª maior nota entre as faculdades privadas da cidade de São Paulo. <br><br>
+3 estrelas na avaliação realizada pelo Guia do Estudante, da Editora Abril, que
+ seleciona os melhores cursos para os estudantes que estão se preparando para o vestibular.<br> <br>
+Destaque no portal da Revista Exame como o curso que está entre os melhores do Brasil. (06/2017)<P>
+ </div>
+
+
+ <div class="mec">
    <img class="img" src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="">
  <p class="ga">Graduação em Administração<p>
    <p class="texto"> Nota 4 na avaliação do MEC – 10.ª maior nota entre as faculdades privadas da cidade de São Paulo. <br><br>
