alteraçoa feita pela katy

--- a/noticias.html
+++ b/noticias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Detalhes </title>
+    <title> Noticias  </title>
     <link rel="shortcut icon" href="img/icon-impacta.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
@@ -21,35 +21,29 @@
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
         <a href="login.html"><div class="login"> Login </div></a>
     </header>
-    <h1 class="h1noticias"> Prêmios e Reconhecimentos  </h1>
-    <img  class="FOTO" src="https://www.impacta.edu.br/uploads/pages/2018/07/premios-e-reconhecimentos-1532471656.png" alt="">
-<p class="facul"> A Faculdade Impacta é altamente reconhecida por sua atuação no mercado da educação, o que comprova
-  o compromisso da Instituição com o ensino de qualidade e a dedicação do Grupo Impacta em transformar
-  a sociedade através da tecnologia. <br>
+    <h2 class="h2">PRÊMIOS E RECONHECIMENTOS </h2>
 
-Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e reconhecimentos que são
- resultados do trabalho contínuo de professores e funcionários e da determinação de seus alunos. <br> <br>
+     <div class="divTexto">
+          <p class="texto"> A Faculdade Impacta é altamente reconhecida por sua atuação no mercado da educação, o que comprova o compromisso da Instituição com o ensino de qualidade e a dedicação do Grupo Impacta em transformar a sociedade através da tecnologia. Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e reconhecimentos que são resultados do trabalho contínuo de professores e funcionários e da determinação de seus alunos.      </p>
+    </div>
+
+    <div class="divBox">
+        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADS.png" alt="" title="">
+
+        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="" title="">
+
+        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-RD.png" alt="" title="">
+    </div>
+
+   <h3 class="h3">CONHEÇA O SMATCLASS</h3>
+
+     <iframe class="video" src="https://www.youtube.com/embed/rBzmhog3cHU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    
+
+    <div class="saiba"> <a href="#"> <div> SAIBA MAIS SOBRE O SMARTCLASS </div> </a></div>
 
 
- <div class="ena">
-   <img class="img" src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="">
- <p class="ga">Graduação em Administração<p>
-   <p class="texto"> Nota 4 na avaliação do MEC – 10.ª maior nota entre as faculdades privadas da cidade de São Paulo. <br><br>
-3 estrelas na avaliação realizada pelo Guia do Estudante, da Editora Abril, que
- seleciona os melhores cursos para os estudantes que estão se preparando para o vestibular.<br> <br>
-Destaque no portal da Revista Exame como o curso que está entre os melhores do Brasil. (06/2017)<P>
- </div>
-
-
- <div class="mec">
-   <img class="img" src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="">
- <p class="ga">Graduação em Administração<p>
-   <p class="texto"> Nota 4 na avaliação do MEC – 10.ª maior nota entre as faculdades privadas da cidade de São Paulo. <br><br>
-3 estrelas na avaliação realizada pelo Guia do Estudante, da Editora Abril, que
- seleciona os melhores cursos para os estudantes que estão se preparando para o vestibular.<br> <br>
-Destaque no portal da Revista Exame como o curso que está entre os melhores do Brasil. (06/2017)<P>
- </div>
-
+    </div>
     <footer>
       <section>
         <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
