--- a/saiba_mais.html
+++ b/saiba_mais.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilogeral.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/noticias.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/saiba.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -21,29 +22,17 @@
         <a href="noticias.html"> <div> <p> Notícias </p> </div> </a>
         <a href="login.html"><div class="login"> Login </div></a>
     </header>
-    <h2 class="h2">PRÊMIOS E RECONHECIMENTOS </h2>
 
-     <div class="divTexto">
-          <p class="texto"> A Faculdade Impacta é altamente reconhecida por sua atuação no mercado da educação, o que comprova o compromisso da Instituição com o ensino de qualidade e a dedicação do Grupo Impacta em transformar a sociedade através da tecnologia. Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e reconhecimentos que são resultados do trabalho contínuo de professores e funcionários e da determinação de seus alunos.      </p>
-    </div>
+             <div class="container banner-main" style="background: url(https://www.impacta.edu.br/uploads/pages/2017/12/smart-class-1513366480.png) center bottom;">
+            <h2 class="banner-title">Smart Class</h2>
+        </div>
 
-    <div class="divBox">
-        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADS.png" alt="" title="">
+            <div class="p">
+            <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/logo-center.png" alt="[]" title=""></div>
+            <div class="h3">
+            <h3>Smart Class</h3></div>
 
-        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-ADM.png" alt="" title="">
-
-        <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/enade-RD.png" alt="" title="">
-    </div>
-
-   <h3 class="h3">CONHEÇA O SMATCLASS</h3>
-
-     <iframe class="video" src="https://www.youtube.com/embed/rBzmhog3cHU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    
-
-    <div class="saiba"> <a href="saiba_mais.html" target="_blank"> <div> SAIBA MAIS SOBRE O SMARTCLASS </div> </a></div>
-
-
-    </div>
+             
     <footer>
       <section>
         <img src="img/faculdadeimpacta.png" alt="" class="imgFooter">
